Bug 1654929. Drop old FBOs that we haven't used in a while. r=gw

This keeps us from accumulating frame buffers without bound.
Previously I was seeing as many 56 frame buffers in this list
during a tab cycling stress test.

Differential Revision: https://phabricator.services.mozilla.com/D84760